maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:53: error: type mismatch;
 found   : Int(2)
 required: Boolean
    if (sol>=Abso(sol-getIndication(x,y-1))>=2){
                                             ^ShortestPathMaze:58: error: type mismatch;
 found   : Boolean
 required: Int
    if (sol>=Abso(sol-getIndication(x-1,y)) && Abso(sol-getIndication(x-1,y)>=2)){
                                                                            ^